--- a/style.css
+++ b/style.css
@@ -50,12 +50,17 @@ main{
     border-radius: 10px;
 }
 .presentation-section {
-    font-size: 25px;
+    font-size: 23px;
     text-align: center; 
 }
 .pie-form{
     text-align: center;
     font-size: 23px;
+    background-color: rgba(255, 255, 255, 0.824);
+    color: black;
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 10px;
 }
 /*Formulario*/
 form{
@@ -97,6 +102,7 @@ button:hover{
 }
 .final{
     font-family: sans-serif;
+    font-size: 20px;
     color: white;
     background:linear-gradient(#648182ee,rgba(157, 205, 157, 0.214));
     padding: 10px 0;
@@ -145,15 +151,19 @@ button:hover{
     background-color: rgba(0, 0, 0, 0.8);
 }
 /* Estilos para los mensajes de error */
-.errorMessage {
-    color: red;
+.error-message {
+    color: #f44336; /* Rojo intenso para los mensajes de error */
     font-size: 14px;
     margin-top: 5px;
+    background-color: #ffe6e6; /* Fondo rosado claro */
+    padding: 5px;
+    border: 1px solid #f44336;
+    border-radius: 4px;
 }
-
 /* Estilos para resaltar los campos con errores */
 .inputError {
-    border: 1px solid red;
+    border: 2px solid #f44336;
+    background-color: #ffe6e6; /* Fondo rosado claro */
 }
 
 
